--- a/views/home.html
+++ b/views/home.html
@@ -12,10 +12,51 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 
-  <title>Hello, world!</title>
+  <!-- Other Stylesheets -->
+  <link rel="stylesheet" href="styles/styles.css">
+
+  <title>Dating Website</title>
 </head>
 <body>
-<h1>Hello, world!</h1>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light mb-5 shadow-sm">
+  <a class="navbar-brand" href="#">Dating Website</a>
+</nav>
+
+<div class="container" id="main">
+  <div class="row">
+    <div class="col-6 align-self-center">
+      <div class="row justify-content-center">
+        <h2>H2 Test Header</h2>
+        <div class="">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <h3>H3 Test Header</h3>
+        <div>
+          <hr>
+          <blockquote class="ml-5">
+            <i>Lorem ipsum dolor sit amet, consectetur adipiscing! - Andrea</i>
+          </blockquote>
+          <blockquote class="ml-5">
+            <i>Lorem ipsum dolor sit amet! - John Smith</i>
+          </blockquote>
+          <blockquote class="ml-5">
+            <i>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. - Sarah</i>
+          </blockquote>
+          <hr>
+        </div>
+      </div>
+      <div class="row pt-5 justify-content-center">
+        <button class="btn btn-lg btn-primary rounded">Create A Profile!</button>
+      </div>
+    </div>
+    <div class="col-6">
+      <img class="rounded" src="images/home_image.jpg">
+    </div>
+  </div>
+</div>
 
 
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
