--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,9 @@
 hr{
-    width: 75%;
+    width: 90%;
+    height: 1px;
+    background-color:lightgray;
+}
+#image{
+    height: auto;
+    max-width: 100%;
 }
