--- a/views/home.html
+++ b/views/home.html
@@ -24,12 +24,21 @@
 </nav>
 
 <div class="container" id="main">
-  <div class="row">
+  <div class="row justify-content-center">
     <div class="col-6 align-self-center">
       <div class="row justify-content-center">
         <h2>H2 Test Header</h2>
         <div class="">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+            sed do eiusmod tempor incididunt ut labore et dolore magna
+            aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+            ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            Duis aute irure dolor in reprehenderit in voluptate velit
+            esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+            occaecat cupidatat non proident, sunt in culpa qui officia
+            deserunt mollit anim id est laborum.
+          </p>
         </div>
       </div>
       <div class="row justify-content-center">
@@ -37,13 +46,20 @@
         <div>
           <hr>
           <blockquote class="ml-5">
-            <i>Lorem ipsum dolor sit amet, consectetur adipiscing! - Andrea</i>
+            <em>
+              Lorem ipsum dolor sit amet, consectetur adipiscing! - Andrea
+            </em>
           </blockquote>
           <blockquote class="ml-5">
-            <i>Lorem ipsum dolor sit amet! - John Smith</i>
+            <em>
+              Lorem ipsum dolor sit amet! - John Smith
+            </em>
           </blockquote>
           <blockquote class="ml-5">
-            <i>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. - Sarah</i>
+            <em>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+              sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. - Sarah
+            </em>
           </blockquote>
           <hr>
         </div>
@@ -53,16 +69,19 @@
       </div>
     </div>
     <div class="col-6">
-      <img class="rounded" src="images/home_image.jpg">
+      <img class="rounded"
+           id="image"
+           src="images/home_image.jpg"
+           alt="image of two people holding hands while standing in shallow water"
+      >
     </div>
   </div>
 </div>
 
 
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.6.0/cjs/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+<!-- jQuery first, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 
 <!-- Optional JavaScript -->
 </body>
