updated title to match with site name

--- a/views/home.html
+++ b/views/home.html
@@ -21,7 +21,7 @@
   <!-- Other Stylesheets -->
   <link rel="stylesheet" href="styles/styles.css">
 
-  <title>Dating Website</title>
+  <title>Balanced</title>
 </head>
 <body class="bg-light">
 
