--- a/views/home.html
+++ b/views/home.html
@@ -26,7 +26,7 @@
 <body class="bg-light">
 
 <nav class="navbar navbar-expand-lg navbar-light bg-white mb-5 border">
-  <a class="navbar-brand" href="#">Balanced</a>
+  <a class="navbar-brand" href="{{ @BASE }}">Balanced</a>
 </nav>
 
 <div class="container border rounded bg-white" id="main">
@@ -47,7 +47,7 @@
       <div class="row justify-content-center mt-5">
         <h3>Here what our users are saying about us!</h3>
         <div>
-          <hr>
+          <hr class="quoteRule">
           <blockquote class="ml-5">
             <em>
               "I met the love of my life after only a month!" - Andrea
@@ -63,19 +63,18 @@
               "Just try it! You'll never be the same!" - Sarah
             </em>
           </blockquote>
-          <hr>
+          <hr class="quoteRule">
         </div>
       </div>
       <div class="row pt-5 justify-content-center">
-        <button class="btn btn-lg btn-primary rounded">Create A Profile!</button>
+        <a href="info"><button class="btn btn-lg btn-primary rounded">Create A Profile!</button></a>
       </div>
     </div>
     <div class="col-6 align-self-center">
       <img class="rounded"
-           id="image"
+           class="image"
            src="images/home_image.jpg"
-           alt="image of two people holding hands while standing in shallow water"
-      >
+           alt="image of two people holding hands while standing in shallow water">
     </div>
   </div>
 </div>
