--- a/views/summary.html
+++ b/views/summary.html
@@ -78,10 +78,10 @@
       </div>
     </div>
   </div>
-  <div class="row justify-content-end mb-3">
+  <div class="row justify-content-center mt-5 mb-3">
     <div class="col-auto">
-      <button type="submit" class="btn btn-primary">
-        Next >
+      <button type="submit" class="btn btn-lg btn-primary">
+        Contact Me!
       </button>
     </div>
   </div>
