changed Create a Profile button to a form

--- a/views/home.html
+++ b/views/home.html
@@ -67,12 +67,13 @@
         </div>
       </div>
       <div class="row pt-5 justify-content-center">
-        <a href="info"><button class="btn btn-lg btn-primary rounded">Create A Profile!</button></a>
+        <form action="info">
+          <button class="btn btn-lg btn-primary rounded" >Create A Profile!</button>
+        </form>
       </div>
     </div>
     <div class="col-6 align-self-center">
-      <img class="rounded"
-           class="image"
+      <img class="rounded image"
            src="images/home_image.jpg"
            alt="image of two people holding hands while standing in shallow water">
     </div>
