updated info1 and info2 forms to POST to themselves

--- a/views/info1.html
+++ b/views/info1.html
@@ -30,7 +30,7 @@
 </nav>
 
 <div class="container border rounded bg-white" id="main">
- <form action="location" method="POST">
+ <form action="location" method="#">
    <fieldset>
      <legend>
        Personal Information
