--- a/views/info2.html
+++ b/views/info2.html
@@ -30,7 +30,7 @@
 </nav>
 
 <div class="container border rounded bg-white" id="main">
-  <form action="interests" method="POST">
+  <form action="interests" method="#">
     <fieldset>
       <legend>
         Profile
