finished work on validator, changed error var names on info3 and updated summary to display session vars properly

--- a/views/info3.html
+++ b/views/info3.html
@@ -49,7 +49,7 @@
       </div>
       <span class="text-danger">
         <check if="{{ isset(@errors['indoorActivities']) }}">
-          {{ @errors['indoorActivity'] }}
+          {{ @errors['indoorActivities'] }}
         </check>
       </span>
 
@@ -65,8 +65,8 @@
         </div>
       </div>
       <span class="text-danger">
-        <check if="{{ isset(@errors['outdoorActivity']) }}">
-          {{ @errors['outdoorActivity'] }}
+        <check if="{{ isset(@errors['outdoorActivities']) }}">
+          {{ @errors['outdoorActivities'] }}
         </check>
       </span>
 
