--- a/views/info3.html
+++ b/views/info3.html
@@ -2,7 +2,7 @@
 - Shawn Potter
 - 1/28/2021
 - info3.html
-- A homepage view for index.php to render
+- Form page for users to submit their interests from a pre-selected set of checkboxes
 -->
 <!doctype html>
 <html lang="en">
