--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,3 +18,9 @@ legend{
     font-size: 1.8rem;
     font-weight:500;
 }
+
+input::placeholder{
+    color: darkred;
+    font-size: 0.8rem;
+    font-style: italic;
+}
