--- a/views/info1.html
+++ b/views/info1.html
@@ -121,8 +121,8 @@
      <div class="form-group">
        <label class="inputGroupLabel">Premium Membership</label><br>
        <div class="form-group w-auto">
-         <input class="form-check-inline" type="checkbox" value="true" id="premium" name="premium">
-         <label class="form-check-label" for="premium">Sign me up for a Premium Account!</label>
+         <input class="form-check-inline" type="checkbox" value="true" id="isPremium" name="isPremium">
+         <label class="form-check-label" for="isPremium">Sign me up for a Premium Account!</label>
        </div>
      </div>
      <div class="form-group row justify-content-end">
