--- a/views/info2.html
+++ b/views/info2.html
@@ -26,7 +26,14 @@
 <body class="bg-light">
 
 <nav class="navbar navbar-expand-lg navbar-light bg-white mb-5 border">
-  <a class="navbar-brand" href="{{ @BASE }}">Balanced</a>
+  <div class="row w-100 justify-content-between">
+    <div class="col">
+      <a class="navbar-brand" href="{{ @BASE }}">Balanced</a>
+    </div>
+    <div class="col-1 align-self-center">
+      <a class="text-muted" href="admin">Admin</a>
+    </div>
+  </div>
 </nav>
 
 <div class="container border rounded bg-white" id="main">
