--- a/views/summary.html
+++ b/views/summary.html
@@ -25,8 +25,16 @@
 </head>
 <body class="bg-light">
 <nav class="navbar navbar-expand-lg navbar-light bg-white mb-5 border">
-  <a class="navbar-brand" href="{{ @BASE }}">Balanced</a>
+  <div class="row w-100 justify-content-between">
+    <div class="col">
+      <a class="navbar-brand" href="{{ @BASE }}">Balanced</a>
+    </div>
+    <div class="col-1 align-self-center">
+      <a class="text-muted" href="admin">Admin</a>
+    </div>
+  </div>
 </nav>
+
 <div class="container border rounded bg-white" id="main">
   <div class="row w-100 mt-3">
     <div class="col-6">
