--- a/views/admin.html
+++ b/views/admin.html
@@ -37,110 +37,41 @@
 </nav>
 
 <div class="container border rounded bg-white" id="main">
-  <form action="#" method="POST">
-    <fieldset>
-      <legend>
-        Personal Information
-      </legend>
-      <hr>
-      <div class="form-group">
-        <label class="inputGroupLabel" for="firstName">First Name<sup class="text-danger">*</sup></label><br>
-        <input type="text"
-               class="form-control"
-               id="firstName"
-               name="firstName"
-               value="{{ @fname }}"
-               placeholder="Required"
-        >
-      </div>
-      <span class="text-danger">
-       <check if="{{ isset(@errors['fname']) }}">
-         {{ @errors['fname'] }}
-       </check>
-     </span>
-      <div class="form-group">
-        <label class="inputGroupLabel" for="lastName">Last Name<sup class="text-danger">*</sup></label><br>
-        <input type="text"
-               class="form-control"
-               id="lastName"
-               placeholder="Required"
-               name="lastName"
-               value="{{ @lname }}"
-        >
-      </div>
-      <span class="text-danger">
-       <check if="{{ isset(@errors['lname']) }}">
-         {{ @errors['lname'] }}
-       </check>
-     </span>
-      <div class="form-group">
-        <label class="inputGroupLabel" for="age">Age<sup class="text-danger">*</sup></label><br>
-        <input type="text"
-               class="form-control"
-               placeholder="Required"
-               id="age"
-               name="age"
-               value="{{ @age }}"
-        >
-      </div>
-      <span class="text-danger">
-       <check if="{{ isset(@errors['age']) }}">
-         {{ @errors['age'] }}
-       </check>
-     </span>
-      <div class="form-group">
-        <label class="inputGroupLabel">Gender</label><br>
-        <div class="form-check form-check-inline">
-          <input class="form-check-input"
-                 type="radio"
-                 name="gender"
-                 id="genderMale"
-                 value="male"
-          <check if="{{ @genderChoice == 'male' }}">checked</check>
-          >
-          <label class="form-check-label" for="genderMale">Male</label>
-        </div>
-        <div class="form-check form-check-inline">
-          <input class="form-check-input"
-                 type="radio"
-                 name="gender"
-                 id="genderFemale"
-                 value="female"
-          <check if="{{ @genderChoice == 'female' }}">checked</check>
-          >
-          <label class="form-check-label" for="genderFemale">Female</label>
-        </div>
-      </div>
-      <span class="text-danger">
-       <check if="{{ isset(@errors['gender']) }}">
-         {{ @errors['gender'] }}
-       </check>
-     </span>
-      <div class="form-group">
-        <label class="inputGroupLabel" for="phone">Phone Number<sup class="text-danger">*</sup></label><br>
-        <input type="text" class="form-control" id="phone" name="phone" placeholder="Required" value="{{ @phone }}">
-      </div>
-      <span class="text-danger">
-       <check if="{{ isset(@errors['phone']) }}">
-         {{ @errors['phone'] }}
-       </check>
-     </span>
-      <div class="form-group">
-        <label class="inputGroupLabel">Premium Membership</label><br>
-        <div class="form-group w-auto">
-          <input class="form-check-inline" type="checkbox" value="true" id="isPremium" name="isPremium">
-          <label class="form-check-label" for="isPremium">Sign me up for a Premium Account!</label>
-        </div>
-      </div>
-      <div class="form-group row justify-content-end">
-        <div class="col-auto">
-          <button type="submit" class="btn btn-primary">
-            Next >
-          </button>
-        </div>
-      </div>
-    </fieldset>
-  </form>
+  <table class="table table-striped">
+    <thead>
+    <tr>
+      <th scope="col">ID</th>
+      <th scope="col">Name</th>
+      <th scope="col">Age</th>
+      <th scope="col">Phone</th>
+      <th scope="col">Email</th>
+      <th scope="col">State</th>
+      <th scope="col">Gender</th>
+      <th scope="col">Seeking</th>
+      <th scope="col">Premium</th>
+      <th scope="col">Interests</th>
+    </tr>
+    </thead>
+    <tbody>
+    <repeat group="{{ @table }}" value="{{ @row }}">
+      <tr>
+        <th scope="row">{{ @row.member_id }}</th>
+        <td>{{ @row.fname }} {{ @row.lname }}</td>
+        <td>{{ @row.age }}</td>
+        <td>{{ @row.phone }}</td>
+        <td>{{ @row.email }}</td>
+        <td>{{ @row.state }}</td>
+        <td>{{ @row.gender }}</td>
+        <td>{{ @row.seeking }}</td>
+        <td class="text-center">
+          <check if="{{ @row.premium}} == 0"><input class="noClick" type="checkbox"></check>
+          <check if="{{ @row.premium}} == 1"><input class="noClick" type="checkbox" checked></check>
+        </td>
+        <td>{{ @row.interests }}</td>
+      </tr>
+    </repeat>
+    </tbody>
+  </table>
 </div>
 
 
@@ -149,5 +80,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 
 <!-- Optional JavaScript -->
+<script src="scripts/noclick.js"></script>
 </body>
 </html>
